--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 @layer base {
   body {
     @apply text-base;
@@ -19,7 +20,7 @@
     @apply flex gap-2 items-center  text-white py-2 px-4 rounded-md;
   }
   .input {
-    @apply bg-transparent p-2 border bg-slate-700 placeholder:text-white border-slate-800 rounded-md outline-none focus:border-slate-300;
+    @apply bg-transparent p-2 border bg-slate-700 placeholder:text-white placeholder:text-sm border-slate-800 rounded-md outline-none focus:border-slate-300;
   }
   .container {
     @apply max-w-[1000px];
